--- a/rabbitmq-cluster-env/.env.example
+++ b/rabbitmq-cluster-env/.env.example
@@ -6,3 +6,7 @@ RABBITMQ_VERSION=3.9
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_ERLANG_COOKIE=
+MASTER_NODE_HOST_NAME=
+
+# HAPROXY
+HAPROXY_VERSION=2.3
