--- a/rabbitmq-cluster-env/haproxy/haproxy.cfg
+++ b/rabbitmq-cluster-env/haproxy/haproxy.cfg
@@ -20,10 +20,14 @@ frontend stats
     stats refresh 10s
     stats admin if LOCALHOST
 
-backend rabbitmq 
-    bind 127.0.0.1:5670
-    mode tcp
+frontend rabbitmq
+    bind *:5672
+    use_backend rabbitmq-server
+
+backend rabbitmq-server
     balance roundrobin
     server rabbitmaster rabbitmq-cluster-01:5672 check inter 5s rise 2 fall 3
     server rabbitslave1 rabbitmq-cluster-02:5672 check inter 5s rise 2 fall 3
 	server rabbitslave2 rabbitmq-cluster-03:5672 check inter 5s rise 2 fall 3
+    server rabbitslave3 rabbitmq-cluster-04:5672 check inter 5s rise 2 fall 3
+    server rabbitslave4 rabbitmq-cluster-05:5672 check inter 5s rise 2 fall 3
