--- a/rabbitmq-cluster-env/rabbitmq/Dockerfile-slave
+++ b/rabbitmq-cluster-env/rabbitmq/Dockerfile-slave
@@ -7,4 +7,5 @@ COPY .erlang.cookie /var/lib/rabbitmq/.erlang.cookie
 COPY join-cluster.sh /usr/local/bin/
 ENTRYPOINT [ "/usr/local/bin/docker-entrypoint.sh" ]
 CMD chmod 400 /var/lib/rabbitmq/.erlang.cookie && \
-    /usr/local/bin/join-cluster.sh
+    /usr/local/bin/join-cluster.sh && \
+    tail -f /dev/null
